// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar should match the snapshot 1`] = `
<div
  class="rdp specific:m-0"
>
  <div
    class="rdp-months"
  >
    <div
      class="rdp-month rdp-caption_start rdp-caption_end"
    >
      <div
        class="flex items-center"
      >
        <button
          aria-label="vorheriges Monat"
          class="mr-auto p-2 text-gray-medium hover:text-gray-dark transition"
        >
          <div
            class="fill-current w-[1em] h-[1em] inline-block text-lg"
            data-icon="arrow_back_ios"
          />
        </button>
        <div
          class="text-base w-full specific:w-32 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="!min-h-0 !rounded-1 !transition-shadow pl-3 gap-1.5 !bg-transparent !border-gray-medium hover:!border-surface hover:!bg-silver hover:!shadow-md css-1s2u09g-control"
          >
            <div
              class="!py-0 !px-0 css-319lph-ValueContainer"
            >
              <div
                class="!m-0 !p-0 !text-gray-dark css-qc6sy-singleValue"
              >
                April
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Monat auswählen"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-2-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="text-2xl !px-3 !py-1 !text-gray-medium css-tlfecz-indicatorContainer"
              >
                <div
                  class="fill-current w-[1em] h-[1em] inline-block"
                  data-icon="arrow_drop_down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="text-base w-full specific:w-24 ml-1 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-3-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="!min-h-0 !rounded-1 !transition-shadow pl-3 gap-1.5 !bg-transparent !border-gray-medium hover:!border-surface hover:!bg-silver hover:!shadow-md css-1s2u09g-control"
          >
            <div
              class="!py-0 !px-0 css-319lph-ValueContainer"
            >
              <div
                class="!m-0 !p-0 !text-gray-dark css-qc6sy-singleValue"
              >
                2022
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Jahr auswählen"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-3-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="text-2xl !px-3 !py-1 !text-gray-medium css-tlfecz-indicatorContainer"
              >
                <div
                  class="fill-current w-[1em] h-[1em] inline-block"
                  data-icon="arrow_drop_down"
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="nächstes Monat"
          class="ml-auto p-2 text-gray-medium hover:text-gray-dark transition"
        >
          <div
            class="fill-current w-[1em] h-[1em] inline-block text-lg rotate-180"
            data-icon="arrow_back_ios"
          />
        </button>
      </div>
      <table
        aria-labelledby="1"
        class="rdp-table specific:mx-6"
        role="grid"
      >
        <thead
          class="rdp-head"
        >
          <tr
            class="rdp-head_row"
          >
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Mo
              </span>
              <span
                class="rdp-vhidden"
              >
                Montag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Di
              </span>
              <span
                class="rdp-vhidden"
              >
                Dienstag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Mi
              </span>
              <span
                class="rdp-vhidden"
              >
                Mittwoch
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Do
              </span>
              <span
                class="rdp-vhidden"
              >
                Donnerstag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Fr
              </span>
              <span
                class="rdp-vhidden"
              >
                Freitag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Sa
              </span>
              <span
                class="rdp-vhidden"
              >
                Samstag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                So
              </span>
              <span
                class="rdp-vhidden"
              >
                Sonntag
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-tbody"
        >
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Mon Mar 28 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  28
                </span>
                <span
                  class="rdp-vhidden"
                >
                  28. März (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Tue Mar 29 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  29
                </span>
                <span
                  class="rdp-vhidden"
                >
                  29. März (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Wed Mar 30 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  30
                </span>
                <span
                  class="rdp-vhidden"
                >
                  30. März (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Thu Mar 31 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  31
                </span>
                <span
                  class="rdp-vhidden"
                >
                  31. März (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 01 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  1
                </span>
                <span
                  class="rdp-vhidden"
                >
                  1. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 02 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  2
                </span>
                <span
                  class="rdp-vhidden"
                >
                  2. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 03 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  3
                </span>
                <span
                  class="rdp-vhidden"
                >
                  3. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 04 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  4
                </span>
                <span
                  class="rdp-vhidden"
                >
                  4. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 05 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  5
                </span>
                <span
                  class="rdp-vhidden"
                >
                  5. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 06 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  6
                </span>
                <span
                  class="rdp-vhidden"
                >
                  6. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                aria-pressed="true"
                class="w-full h-8 transition duration-200 font-bold specific:text-white specific:bg-primary rounded hover:bg-gray-light"
                date="Thu Apr 07 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="0"
              >
                <span
                  aria-hidden="true"
                >
                  7
                </span>
                <span
                  class="rdp-vhidden"
                >
                  7. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 08 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  8
                </span>
                <span
                  class="rdp-vhidden"
                >
                  8. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 09 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  9
                </span>
                <span
                  class="rdp-vhidden"
                >
                  9. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 10 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  10
                </span>
                <span
                  class="rdp-vhidden"
                >
                  10. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 11 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  11
                </span>
                <span
                  class="rdp-vhidden"
                >
                  11. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 12 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  12
                </span>
                <span
                  class="rdp-vhidden"
                >
                  12. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 13 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  13
                </span>
                <span
                  class="rdp-vhidden"
                >
                  13. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Thu Apr 14 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  14
                </span>
                <span
                  class="rdp-vhidden"
                >
                  14. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 15 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  15
                </span>
                <span
                  class="rdp-vhidden"
                >
                  15. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 16 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  16
                </span>
                <span
                  class="rdp-vhidden"
                >
                  16. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 17 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  17
                </span>
                <span
                  class="rdp-vhidden"
                >
                  17. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 18 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  18
                </span>
                <span
                  class="rdp-vhidden"
                >
                  18. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 19 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  19
                </span>
                <span
                  class="rdp-vhidden"
                >
                  19. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 20 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  20
                </span>
                <span
                  class="rdp-vhidden"
                >
                  20. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Thu Apr 21 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  21
                </span>
                <span
                  class="rdp-vhidden"
                >
                  21. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 22 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  22
                </span>
                <span
                  class="rdp-vhidden"
                >
                  22. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 23 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  23
                </span>
                <span
                  class="rdp-vhidden"
                >
                  23. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 24 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  24
                </span>
                <span
                  class="rdp-vhidden"
                >
                  24. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 25 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  25
                </span>
                <span
                  class="rdp-vhidden"
                >
                  25. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 26 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  26
                </span>
                <span
                  class="rdp-vhidden"
                >
                  26. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 27 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  27
                </span>
                <span
                  class="rdp-vhidden"
                >
                  27. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Thu Apr 28 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  28
                </span>
                <span
                  class="rdp-vhidden"
                >
                  28. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 29 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  29
                </span>
                <span
                  class="rdp-vhidden"
                >
                  29. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 30 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  30
                </span>
                <span
                  class="rdp-vhidden"
                >
                  30. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Sun May 01 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  1
                </span>
                <span
                  class="rdp-vhidden"
                >
                  1. Mai (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Calendar should match the snapshot if there are events available 1`] = `
<div
  class="rdp specific:m-0"
>
  <div
    class="rdp-months"
  >
    <div
      class="rdp-month rdp-caption_start rdp-caption_end"
    >
      <div
        class="flex items-center"
      >
        <button
          aria-label="vorheriges Monat"
          class="mr-auto p-2 text-gray-medium hover:text-gray-dark transition"
        >
          <div
            class="fill-current w-[1em] h-[1em] inline-block text-lg"
            data-icon="arrow_back_ios"
          />
        </button>
        <div
          class="text-base w-full specific:w-32 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-4-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="!min-h-0 !rounded-1 !transition-shadow pl-3 gap-1.5 !bg-transparent !border-gray-medium hover:!border-surface hover:!bg-silver hover:!shadow-md css-1s2u09g-control"
          >
            <div
              class="!py-0 !px-0 css-319lph-ValueContainer"
            >
              <div
                class="!m-0 !p-0 !text-gray-dark css-qc6sy-singleValue"
              >
                April
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Monat auswählen"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-4-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="text-2xl !px-3 !py-1 !text-gray-medium css-tlfecz-indicatorContainer"
              >
                <div
                  class="fill-current w-[1em] h-[1em] inline-block"
                  data-icon="arrow_drop_down"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="text-base w-full specific:w-24 ml-1 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-5-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
          />
          <div
            class="!min-h-0 !rounded-1 !transition-shadow pl-3 gap-1.5 !bg-transparent !border-gray-medium hover:!border-surface hover:!bg-silver hover:!shadow-md css-1s2u09g-control"
          >
            <div
              class="!py-0 !px-0 css-319lph-ValueContainer"
            >
              <div
                class="!m-0 !p-0 !text-gray-dark css-qc6sy-singleValue"
              >
                2022
              </div>
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Jahr auswählen"
                aria-readonly="true"
                class="css-mohuvp-dummyInput-DummyInput"
                id="react-select-5-input"
                inputmode="none"
                role="combobox"
                tabindex="0"
                value=""
              />
            </div>
            <div
              class=" css-1hb7zxy-IndicatorsContainer"
            >
              <div
                aria-hidden="true"
                class="text-2xl !px-3 !py-1 !text-gray-medium css-tlfecz-indicatorContainer"
              >
                <div
                  class="fill-current w-[1em] h-[1em] inline-block"
                  data-icon="arrow_drop_down"
                />
              </div>
            </div>
          </div>
        </div>
        <button
          aria-label="nächstes Monat"
          class="ml-auto p-2 text-gray-medium hover:text-gray-dark transition"
        >
          <div
            class="fill-current w-[1em] h-[1em] inline-block text-lg rotate-180"
            data-icon="arrow_back_ios"
          />
        </button>
      </div>
      <table
        aria-labelledby="3"
        class="rdp-table specific:mx-6"
        role="grid"
      >
        <thead
          class="rdp-head"
        >
          <tr
            class="rdp-head_row"
          >
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Mo
              </span>
              <span
                class="rdp-vhidden"
              >
                Montag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Di
              </span>
              <span
                class="rdp-vhidden"
              >
                Dienstag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Mi
              </span>
              <span
                class="rdp-vhidden"
              >
                Mittwoch
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Do
              </span>
              <span
                class="rdp-vhidden"
              >
                Donnerstag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Fr
              </span>
              <span
                class="rdp-vhidden"
              >
                Freitag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Sa
              </span>
              <span
                class="rdp-vhidden"
              >
                Samstag
              </span>
            </th>
            <th
              class="rdp-head_cell specific:w-10 specific:h-7 specific:text-[11px] specific:leading-[13px]"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                So
              </span>
              <span
                class="rdp-vhidden"
              >
                Sonntag
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-tbody"
        >
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Mon Mar 28 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  28
                </span>
                <span
                  class="rdp-vhidden"
                >
                  28. März (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Tue Mar 29 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  29
                </span>
                <span
                  class="rdp-vhidden"
                >
                  29. März (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Wed Mar 30 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  30
                </span>
                <span
                  class="rdp-vhidden"
                >
                  30. März (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Thu Mar 31 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  31
                </span>
                <span
                  class="rdp-vhidden"
                >
                  31. März (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 01 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  1
                </span>
                <span
                  class="rdp-vhidden"
                >
                  1. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 02 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  2
                </span>
                <span
                  class="rdp-vhidden"
                >
                  2. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 03 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  3
                </span>
                <span
                  class="rdp-vhidden"
                >
                  3. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 04 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  4
                </span>
                <span
                  class="rdp-vhidden"
                >
                  4. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 05 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  5
                </span>
                <span
                  class="rdp-vhidden"
                >
                  5. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 06 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  6
                </span>
                <span
                  class="rdp-vhidden"
                >
                  6. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                aria-pressed="true"
                class="w-full h-8 transition duration-200 font-bold specific:text-white specific:bg-primary rounded hover:bg-gray-light"
                date="Thu Apr 07 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="0"
              >
                <span
                  aria-hidden="true"
                >
                  7
                </span>
                <span
                  class="rdp-vhidden"
                >
                  7. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 08 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  8
                </span>
                <span
                  class="rdp-vhidden"
                >
                  8. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 09 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  9
                </span>
                <span
                  class="rdp-vhidden"
                >
                  9. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 10 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  10
                </span>
                <span
                  class="rdp-vhidden"
                >
                  10. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 11 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  11
                </span>
                <span
                  class="rdp-vhidden"
                >
                  11. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 12 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  12
                </span>
                <span
                  class="rdp-vhidden"
                >
                  12. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 13 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  13
                </span>
                <span
                  class="rdp-vhidden"
                >
                  13. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Thu Apr 14 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  14
                </span>
                <span
                  class="rdp-vhidden"
                >
                  14. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 15 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  15
                </span>
                <span
                  class="rdp-vhidden"
                >
                  15. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 16 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  16
                </span>
                <span
                  class="rdp-vhidden"
                >
                  16. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 17 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  17
                </span>
                <span
                  class="rdp-vhidden"
                >
                  17. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 18 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  18
                </span>
                <span
                  class="rdp-vhidden"
                >
                  18. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 19 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  19
                </span>
                <span
                  class="rdp-vhidden"
                >
                  19. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 20 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  20
                </span>
                <span
                  class="rdp-vhidden"
                >
                  20. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Thu Apr 21 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  21
                </span>
                <span
                  class="rdp-vhidden"
                >
                  21. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 22 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  22
                </span>
                <span
                  class="rdp-vhidden"
                >
                  22. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 23 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  23
                </span>
                <span
                  class="rdp-vhidden"
                >
                  23. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sun Apr 24 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  24
                </span>
                <span
                  class="rdp-vhidden"
                >
                  24. April (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Mon Apr 25 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  25
                </span>
                <span
                  class="rdp-vhidden"
                >
                  25. April (Montag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Tue Apr 26 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  26
                </span>
                <span
                  class="rdp-vhidden"
                >
                  26. April (Dienstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Wed Apr 27 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  27
                </span>
                <span
                  class="rdp-vhidden"
                >
                  27. April (Mittwoch)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Thu Apr 28 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  28
                </span>
                <span
                  class="rdp-vhidden"
                >
                  28. April (Donnerstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Fri Apr 29 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  29
                </span>
                <span
                  class="rdp-vhidden"
                >
                  29. April (Freitag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 rounded hover:bg-gray-light"
                date="Sat Apr 30 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  30
                </span>
                <span
                  class="rdp-vhidden"
                >
                  30. April (Samstag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
            <td
              class="rdp-cell specific:w-10 specific:h-8 specific:text-[18px] specific:leading-[21px] specific:pb-2"
            >
              <button
                class="w-full h-8 transition duration-200 text-gray-medium rounded hover:bg-gray-light"
                date="Sun May 01 2022 00:00:00 GMT+0000 (Coordinated Universal Time)"
                tabindex="-1"
              >
                <span
                  aria-hidden="true"
                >
                  1
                </span>
                <span
                  class="rdp-vhidden"
                >
                  1. Mai (Sonntag)
                </span>
                <div
                  class="flex justify-center h-[3px] gap-[3px] px-px overflow-hidden mt-px w-[38px]"
                />
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
